--- a/style.css
+++ b/style.css
@@ -1,64 +1,111 @@
-body{
-	margin: 0;
+*{
 	padding: 0;
-	background: url(https://images.all-free-download.com/images/graphiclarge/seamless_pattern_food_312943.jpg);
+	margin: 0;
+	border: 0;
+}
+*,*:before,*:after{
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+nav,footer,header,aside{display: block;}
+html,body{
+	height: 100%;
+	width: 100%;
+	font-size: 100%;
+	line-height: 1;
+	font-size: 14px;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family:inherit;}
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+
+
+body{
+	background: url(https://img5.goodfon.ru/wallpaper/nbig/4/39/belyi-fon-kofe-kruasany.jpg);
+	background-size: 100% 720px;
 	background-repeat: no-repeat;
-	background-size: 100% 100vh;
-	font-family: UberMoveText, sans-serif;
+	font-family: Trebuchet MS, sans-serif;
 }
-.text{
-	font-size: 30px;
+.block_heading{
+	margin: 40px 40px 30px 40px;
 }
-h4::after{
+.heading:after{
 	content: "Eats";
 	color: green;
 	font-size: 30px;
 }
-.text2{
-	font-size: 40px;
-}
-input{
-font-size: 17px;
-height:40px ;
-width:400px ;
-background-color: lavender;
-border: solid 0px;
-}
-select{
-	font-size: 17px;
-	width: 130px;
-	height: 45px;
-	background-color: lavender;
-	border: solid 0px;
-}
-
-.but1{
-	background-color: black;
-	color: white;
-	position:relative;
-	font-size: 17px;
-	height: 45px;
-	border: solid 0px;
-}
-.but2{
-	background-color:lavender;
-	position:fixed;
-	top: 50px;
-	left: 1400px;
-	font-size: 20px;
-	height: 60px;
-	width: 90px;	
-	border-radius: 50px/50px;
-	border: solid 0px;
-}
-.link{
+.heading{
+	font-size: 30px;
 	color: black;
-	text-decoration: none;
 }
-
+.login{
+	font-size: 30px;
+	border-radius: 50px 50px; 
+	background-color: lavender;
+	color: black;
+	position: relative;
+	left: 1200px;
+	height: 50px;
+	width: 90px;
+}
+.sign_in{
+	display: block;
+	color: black;
+	font-size: 20px;
+	height: 25px;
+}
+.block_text{
+	margin: 200px 0 0 0;
+}
+.text{
+	font-size: 48px;
+	font-weight: 700;
+	margin: 0 0 40px 0;
+}
+.address{
+	padding: 16px 16px 16px 16px;
+	width: 460px;
+	max-height: 50px;
+	font-size: 17px;
+	border: 2px solid black;
+	background-image: url(clock.png)center no-repeat;
+}
+.select_delivery{
+	width: 190px;
+	height: 50px;
+	font-size: 17px;
+	border: 2px solid black;
+	margin: 0 7px 0 7px;
+}
+.search{
+	padding: 12px 16px 12px 16px;
+	width: 116px;
+	height: 50px;
+	color: white;
+	background-color: black;
+	font-size: 17px;
+}
 .textlink{
-	color-interpolation: black;
-	text-decoration: no-underline;
-	font-size: 14px;
+	font-size: 17px;
 }
-
+.block_textlink{
+	margin: 10px 0 0 0;
+	font-size: 17px;
+}
+.textlink{
+	color: black;
+	color-interpolation: black;
+	text-decoration: underline;
+}
