--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
 nav,footer,header,aside{display: block;}
 html,body{
 	height: 100%;
@@ -38,34 +36,39 @@ body{
 	background-repeat: no-repeat;
 	font-family: Trebuchet MS, sans-serif;
 }
-.block_heading{
+
+/*Header*/
+
+.container{
+	margin: 5px 40px 0px 40px;
+}
+.header{
 	width: 100%;
 	height: 720px;
 }
-.head{
-	margin: 5px 40px 0px 40px;
+.header-top__content{
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
 	justify-content: space-between;
 	height: 100px;
 }
-.icon{
+.menu{
 	font-size: 25px;
 	margin: 0 20px 20px 0;
 	font-weight: 1000;
 	color: black;
 }
-.heading:after{
+.logo:after{
 	content: "Eats";
 	color: green;
 	font-size: 30px;
 }
-.heading{
+.logo{
 	font-size: 30px;
 	color: black;
 }
-.sign-in-link{
+.link-login{
 	max-height: 32px;
 	max-width: 57px;
 	padding: 12px 16px;
@@ -76,20 +79,21 @@ body{
 	color: black;
 	font-size: 18px;
 }
-.block_text{
-	margin: 10px 0 40px 40px;
-	height: 200px;
-	padding: 152px 0 0 0;
+.header-subtitle{
+	height: 250px;
 }
-.text{
+.subtitle__text{
+	position: relative;
+	top: 200px;
 	font-size: 48px;
 	font-weight: 700;
 }
-.block_input{
-	margin: 0 0 0 40px;
+.header-search{
 	display: flex;
+	height: 80px;
+	align-items: center;
 }
-.address{
+.input{
 	padding: 16px 16px 16px 16px;
 	width: 460px;
 	max-height: 50px;
@@ -97,14 +101,14 @@ body{
 	font-size: 17px;
 	border: 2px solid black;
 }
-.select_delivery{
+.select{
 	width: 190px;
 	height: 50px;
 	font-size: 17px;
 	border: 2px solid black;
 	margin: 0 7px 0 7px;
 }
-.search{
+.button{
 	padding: 12px 16px 12px 16px;
 	width: 116px;
 	height: 50px;
@@ -117,24 +121,25 @@ body{
 	text-decoration: underline;
 	font-size: 17px;
 }
-.block_textlink{
-	margin: 10px 0 0 40px;
+.header-textlink{
 	font-size: 17px;
 }
 
 /*Основная информация страницы*/
 
-.section__images__links{
-	margin: 80px 20px 50px 20px;
-	height: 350px;	
+.section-links{
+	height: 450px;	
+	display: flex;
+	align-items: center;
+
 }
-.row{
+.section-links__items{
 	display: flex;
 	justify-content: center;
 	flex-direction: row;
 	flex-basis: 100%;
 }
-.block__link{
+.item-link{
 	padding: 0 10px 0 10px;
 }
 .image img{
@@ -142,12 +147,12 @@ body{
 	height: 250px;
 	object-fit: cover;
 }
-.element__1{
+.item-title{
 	font-size: 30px;
 	font-weight: 800;
 	color: black;
 }
-.element__2{
+.item-subtitle{
 	font-size: 16px;
 	text-decoration: underline;
 	color: black;
@@ -155,61 +160,54 @@ body{
 
 /*Блок карты*/
 
-.title__map{
+.google-map__map-title{
 	display: flex;
 	justify-content: space-between;
-	padding: 0 0px 25px 100px;
-	margin: ;
 }
 .title{
 	font-size: 40px;
 	font-weight: 800;
 }
-.link__maps{
-	padding: 24px 100px 0 0;
+.map-link{
+	padding: 24px 0px 0 0;
 	font-size: 18px;
 	font-weight: 700;
 	color: black;
 	text-decoration: underline;
 }
-.google__maps{
-	padding: 0 100px 30px 100px;
+.map-coordinates{
+	padding: 30px 0 40px 0;
 	border: 0;
 }
 
 /* Области */
 
-.block__areas{
-	padding: 0 50px 0 50px;
+.section-areas__columns{
 	display: flex;
 	justify-content: flex-start;
 	justify-content: space-around;
 	align-items: flex-start;
 	flex-direction:	row;
-	line-height: 50px;	
+	line-height: 50px;
+
 }
-.row__1,
-.row__2,
-.row__3,
-.row__4{
+.column{
 	display: flex;
 	flex-direction: column;
+	flex-basis: 75%;
 }
-.block__areas a{
+.section-areas__columns a{
 	font-size: 15px;
 	color: black;
-	font-weight: 0;
-	font-style: italic;
 }
 
 /*Страны*/
 
-.block__country{
+.section-countries__columns{
 	padding: 80px 0 0 0;
 }
 .countries{
-	margin: 24px 0 0 0;
-	padding: 0 50px 0 50px;
+	padding: 24px 0 0 0;
 	display: flex;
 	justify-content: flex-start;
 	justify-content: space-around;
@@ -219,32 +217,25 @@ body{
 .countries a{
 	font-size: 15px;
 	color: black;
-	font-weight: 0;
-	font-style: italic;
 }
-.title__counry{
-	padding: 0 0 0 100px;
-}
-
 /*Footer*/
 
-.container__footer{
+.footer-bg{
 	margin: 80px 0 0 0;
 	padding: 72px 0 88px 0;
 	height: 450;
 	width: 100%;
-	background-color: black;
+	background-color: black;*/
 	color: white;
 }
-.block__footer{
+.footer-content{
 	display: flex;
-	padding: 0 100px 0 100px;
 	justify-content: space-between;
 }
-.title__link a{
+.footer-content__logo-images a{
 	color: white
 }
-.title__link{
+.footer-content__logo-images{
 	display: flex;
 	flex-direction:column ;
 	justify-content: space-between;
@@ -253,12 +244,12 @@ body{
 	width: 135px;
 	height: 40px;
 }
-.block__lists{
+.footer-content__menu{
 	display: flex;
 	flex-basis: 50%;
 	justify-content: space-around;
 }
-.block__lists a,li{
+.footer-content__menu a,li{
 	font-size: 16px;
 	color: white;
 	line-height: 40px;
@@ -266,34 +257,42 @@ body{
 	flex: 0 0 190;
 	flex-wrap: nowrap;
 }
-.block__list__1
-.block__list__2 a,li:hover{
+.menu-list li:hover{
 	text-decoration: underline;
 }
-.space hr{
-	margin: 40px 35px 40px 35px;	
+.footer-space hr{
+	margin: 40px 0px 40px 0;	
 }
-.final__links{
-	padding: 0 30px 30px 60px;
+.footer-content__bottom{
+	padding: 0 0 30px 0;
 	display: flex;
-	flex-basis: 50%;
 	justify-content: flex-end;
+	justify-content: space-between;
 }
-.last__links{
+.social-network{
+	display: flex;
+	justify-content: space-between;
+	flex-basis: 10%;
+}
+.bottom-content{
 	display: flex;
 	flex-basis: 35%;
 	justify-content: space-between;
-
 }
-.last__links a{
+.bottom-content a{
 	color: white;
 	font-size: 16px;
 }
-.last__links a:hover{
+.bottom-content a:hover{
 	text-decoration: underline;
 }
-.license{
+.icon{
+	height: 25px;
+	width: 25px;
+}
+.footer-license{
 	display: flex;
 	justify-content: flex-end;
-	padding: 0 30px 0 0;
+	color: white;
 }
+
